--- a/Ticketing_gen/server/.env
+++ b/Ticketing_gen/server/.env
@@ -1,2 +1,3 @@
 PORT=9000
 MONGO_URI="mongodb+srv://shivamp:shivamp1234@cluster0.csg93.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+BASE_URL="http://localhost:"
