--- a/Ticketing_gen/server/package.json
+++ b/Ticketing_gen/server/package.json
@@ -5,15 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "client": "cd .. && cd client && npm start",
-    "dev": "concurrently -n 'server,client' -c 'blue,green' \"nodemon index.js\" \"npm run client\""
+    "dev": "nodemon index.js"
   },
   "author": "Shivam Shukla",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
-    "concurrently": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
