--- a/chat-app/client/package.json
+++ b/chat-app/client/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.5",
     "sass": "^1.53.0",
+    "socket.io-client": "^4.5.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
