--- a/chat-app/client/package.json
+++ b/chat-app/client/package.json
@@ -18,8 +18,11 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "buffer": "^6.0.3",
+    "emoji-picker-react": "^3.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -52,5 +55,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
