--- a/chat-app/client/package.json
+++ b/chat-app/client/package.json
@@ -20,6 +20,7 @@
     "bootstrap-icons": "^1.8.3",
     "buffer": "^6.0.3",
     "emoji-picker-react": "^3.5.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.4",
